# Bumblebee_CLI

./: .beeignore  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
Formula/: bumblebee-cli.rb
bbcli/: __init__.py  catalog.py  differ.py  exporter.py  fixer.py  history.py  ignorer.py  installer.py  interactive.py  lockfile.py  main.py  policy.py  reporter.py  sbom.py  scanner.py  scheduler.py  scorer.py  theme.py  trend.py  watcher.py
homebrew-tap/: README.md
homebrew-tap/Formula/: bumblebee-cli.rb
tests/: __init__.py  test_catalog.py  test_history.py  test_installer.py  test_reporter.py  test_scanner.py
