[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bumblebee-cli"
version = "2.1.0"
description = "Dependency security scanner for macOS — detects malicious, vulnerable, and suspicious packages across npm, PyPI, Go, Ruby and more"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["security", "supply-chain", "scanner", "bumblebee", "cli", "sbom"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Environment :: Console",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "rich>=13.7.0",
    "typer>=0.12.0",
    "fpdf2>=2.7.9",
    "questionary>=2.0.1",
    "python-dateutil>=2.9.0",
    "requests>=2.31.0",
    "packaging>=24.0",
]

[project.scripts]
bee = "bbcli.main:app"

[project.urls]
Homepage = "https://github.com/chanduchitikam/bumblebee-cli"
"Bug Tracker" = "https://github.com/chanduchitikam/bumblebee-cli/issues"
Source = "https://github.com/chanduchitikam/bumblebee-cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["bbcli*"]
